--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -1,3 +1,8 @@
 body {
 	font-family: helvetica, arial, serif;
+	font-size: 11pt;
 }
+
+.inline {display: inline;}
+.inline-block {display: inline-block;}
+.floatright {float: right;}
