added the imgur stuff. still not decided between this and facebook. probably this

--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -3,6 +3,7 @@ body {
 	font-size: 11pt;
 }
 
+.hide {display: none;}
 .inline {display: inline;}
 .inline-block {display: inline-block;}
 .floatright {float: right;}
