--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
@@ -50,11 +50,16 @@
 	font-size: 0.7em;
 }
 
+.feed-owner-container {
+	min-height: 150px;
+}
 .newpost {
 	background-color: #FFFBD7;
 	padding: 3px;
 	width: 450px;
 	border: 1px dotted lightgrey;
+	position: absolute;
+	z-index: 1;
 }
 
 .newpost-poster-pic {
@@ -90,6 +95,10 @@
 	float: right;
 }
 
+.feed-container {
+	position: relative;
+}
+
 .feed-posts-container {
 	margin: 10px 0 0 0;
 }
@@ -99,25 +108,26 @@
 	font-size: 1.2em;
 }
 
-.post {
+.post, .category {
 	border-color: #E9E9E9;
 	border-style: solid;
 	border-width: 1px 0 0;
 	min-height: 65px;
 }
 
-.post-pic {
+.post-pic, .category-pic {
 	position: absolute;
 	margin: 5px;
 	width: 50px;
 	height: 50px;
 }
 
-.post-data-container {
+.post-data-container, .category-data-container {
 	margin: 10px 10px 10px 60px;
 }
 
-.post-title, .post-title a {
+.post-title, .post-title a,
+.category-name, .category-name a {
 	color: #530000;
 	font-size:1.1em;
 	text-decoration: none;
@@ -131,4 +141,13 @@
 	margin-top: 2px;
 	color: grey;
 	font-size:0.9em;
+}
+
+.catalog-container {
+	position: relative;	
+}
+
+.catalog-categories {
+	font-size: 1.2em;
+	list-style-type: none;
 }
