--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -27,6 +27,7 @@ body {
 	height: 100%;
 	width: 100%;
 	opacity: 0.8;
+	filter:alpha(opacity=80); /* For IE8 and earlier */
 	top: 0;
 	left: 0;
 	background-image: url("../images/spinner.gif");
