--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -94,6 +94,68 @@
     margin: 6px 20px;
 }
 
+.search-container {
+	display: inline-block;
+	vertical-align: middle;
+	padding: 1px 0 2px;
+    position: relative;
+    margin-left: 30px;
+    background-color: white;
+}
+
+.search-container input[type="text"] {
+	width: 315px;
+	border: 0 none;
+    margin: 0 0 0 5px;
+    outline: medium none;
+}
+
+.search-container button {
+	width: 22px;
+}
+
+.search-container button .ui-button-icon-primary {
+	left: 0.2em;
+}
+
+.autocomplete-results {
+	position: absolute;
+	width: 400px;
+	max-width: 400px;
+	min-width: 400px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	z-index: 1;
+	padding: 5px;	
+}
+
+.autocomplete-container {
+	min-height: 60px;
+}
+
+.autocomplete-img {
+	max-width: 40px;
+	max-height: 40px;
+	float: left;
+	margin: 5px;	
+}
+
+.autocomplete-title {
+	white-space: nowrap;
+	font-weight: bold;
+}
+
+.autocomplete-description {
+	font-weight: 100;
+}
+
+.autocomplete-title,
+.autocomplete-description {
+	max-width: 400px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .navigation-container {
 	height: 100%;
 }
