--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -129,8 +129,14 @@
 	padding: 5px;	
 }
 
+.autocomplete-results a {
+	text-decoration: none;	
+}
+
 .autocomplete-container {
 	min-height: 60px;
+	border: 1px solid transparent;
+	padding: 2px 0 0 0;
 }
 
 .autocomplete-img {
@@ -154,6 +160,13 @@
 	max-width: 400px;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.autocomplete-allresults {
+	margin: 1px 0 0 0;
+	font-weight: bolder; 
+	padding-left: 2px; 
+	border: 1px dotted grey;
 }
 
 .navigation-container {
