--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -3,9 +3,6 @@ body {
 	font-family: helvetica, arial, serif;
 	font-size: 11pt;
 }
-#body {
-	min-height: 640px;	
-}
 
 .ui-button .ui-button-text {
 	font-size: 10pt !important;
@@ -22,6 +19,7 @@ body {
 .centercontent {text-align: center;}
 	/* fonts */
 .italic {font-style: italic;}
+.capitalize {text-transform: capitalize;}
 
 /* special classes */
 .overlay {
