--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
@@ -21,7 +21,9 @@
 .profilepic-container {
 	height: 140px;
 	top: 0;
+	text-align: center;
 }
+
 .profilepic-inner-container {
 	height: 100px;
 	width: 100px;
@@ -29,11 +31,19 @@
 	background-color: white;
 	margin: auto;
 }
+
 .profilepic {
 	max-width: 90px;
 	max-height: 90px;
 	margin: 5px 5px;
 	cursor: pointer;
+}
+
+.btn-subscribe-toggle {
+	padding: 5px;
+	margin: 5px 0 0 0;
+	white-space: nowrap;
+	width: 90%;
 }
 
 .fullname {
@@ -46,18 +56,25 @@
 	margin-top: 40px;
 	height: 130px;
 }
+
 .tabs {
-	font-size: 0.7em;
+	
 }
 
 .feed-owner-container {
 	min-height: 150px;
 }
+
+.feed-posts {
+	font-size: 0.9em;
+}
+
 .newpost {
 	padding: 3px;
 	width: 450px;
 	position: absolute;
 	z-index: 1;
+	font-size: 0.7em;
 }
 
 .newpost-poster-pic {
@@ -102,45 +119,6 @@
 	margin: 10px 0 0 0;
 }
 
-.feed-posts {
-	list-style-type: none;
-	font-size: 1.2em;
-}
-
-.post, .category {
-	border-color: #E9E9E9;
-	border-style: solid;
-	border-width: 1px 0 0;
-	min-height: 65px;
-}
-
-.post-pic, .category-pic {
-	position: absolute;
-	margin: 5px;
-	width: 50px;
-	height: 50px;
-}
-
-.post-data-container, .category-data-container {
-	margin: 10px 10px 10px 60px;
-}
-
-.post-title, .post-title a,
-.category-name, .category-name a {
-	font-size:1.1em;
-	text-decoration: none;
-}
-
-.post-text {
-	margin-top: 6px;
-}
-
-.post-time {
-	margin-top: 2px;
-	color: grey;
-	font-size:0.9em;
-}
-
 .catalog-container {
 	position: relative;	
 	min-height: 300px;
@@ -149,4 +127,9 @@
 .catalog-categories {
 	font-size: 1.2em;
 	list-style-type: none;
+}
+
+.map {
+	width: 100%;
+	height: 400px;	
 }
