--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
@@ -40,7 +40,7 @@
 }
 
 .btn-subscribe-toggle {
-	padding: 5px;
+	padding: 5px 7px 5px 5px;
 	margin: 5px 0 0 0;
 	white-space: nowrap;
 	width: 90%;
@@ -58,7 +58,8 @@
 }
 
 .tabs {
-	
+	margin: 10px 0; 
+	padding: 0;
 }
 
 .feed-owner-container {
