--- a/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
@@ -7,8 +7,9 @@
 	border-style: solid;
 	border-width: 1px 0 0;
 	min-height: 65px;
+	padding: 5px;
 }
-.post:first-child {
+.post:first-child, .category:first-child {
 	border-top-color: transparent;
 }
 
@@ -30,6 +31,18 @@
 
 .post-text {
 	margin-top: 6px;
+}
+
+.playbutton {
+	margin-bottom: 5px;
+}
+.post-attachment {
+	margin-top: 15px;
+}
+
+.post-attachment img.attachment-img {
+	max-width: 400px;
+	max-height: 300px;
 }
 
 .post-time {
