--- a/indgte/indgte-webapp/src/main/webapp/resources/css/home.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/home.css
@@ -8,6 +8,11 @@
 	width: 500px;
 	position: relative;
 }
+
+.newpost input, .newpost textarea {
+	outline: none;
+}
+
 .newpost.active {
 	border: 1px dotted lightskyblue;
 	padding: 10px;
@@ -18,6 +23,8 @@
 }
 
 .status-title {
+	width: 90%;
+	border-width: 0 0 1px 0;
 	border-bottom-style: dashed;
 	padding: 4px;
 }
@@ -28,12 +35,7 @@
 	overflow-y: hidden;
 	font-weight: normal !important;
 	padding: 4px;
-}
-.status-textarea.ui-state-active {
-	border-top: 0;
-}
-.status-textarea:not(.noattachment) {
-	border-bottom: 0;
+	border: 0;
 }
 
 .status-textarea:-moz-placeholder, .status-title:-moz-placeholder{
@@ -44,8 +46,9 @@
 }
 
 .attach-input-container {
-	margin-top: -1px;
+	margin-top: -2px;
 	border-top-style: dashed !important;
+	border-width: 1px 0 0 0;
 	padding: 2px;	
 }
 
@@ -139,8 +142,11 @@
 	float: left;
 	margin-right: 5px;
 }
-.post-as-option .name, .attach-option .name {
-	margin-top: -2px;
+.post-as-option .name {
+	margin: -2px 0 0 30px;
+}
+.attach-option .name {
+	margin: -2px 0 0 0;
 }
 
 .post-as-category {
@@ -148,4 +154,21 @@
 	font-size: 0.7em;
 	opacity: 0.7;
 	text-transform: capitalize;
+}
+
+.entity-suggestions {
+	position: absolute;
+	width: 400px;
+	max-width: 400px;
+	min-width: 400px;
+	max-height: 250px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	z-index: 1;
+	padding: 5px;	
+}
+
+.entity-suggestion, .entity-suggestion-clone {
+	cursor: pointer;
 }
