--- a/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
@@ -3,7 +3,7 @@
 }
 
 .post, .category {
-	border-color: #E9E9E9;
+	border-color: #d2d2d2;
 	border-style: solid;
 	border-width: 1px 0 0;
 	min-height: 65px;
@@ -37,12 +37,44 @@
 	margin-bottom: 5px;
 }
 .post-attachment {
-	margin-top: 15px;
+	margin: 10px 0 5px 0;
+	border-top: 1px solid #e9e9e9;
+	padding-top: 5px;
+	font-size: 0.9em;
+}
+
+.post-attachment h4 {
+	margin-top: 0;
+	margin-bottom: 4px;
+}
+
+.attachment-description {
+	margin-bottom: 10px;
+	font-size: 0.9em;
+	color: grey;
+	font-style: italic;
 }
 
 .post-attachment img.attachment-img {
 	max-width: 400px;
 	max-height: 300px;
+}
+
+.category-attachment-img {
+	max-width: 400px;
+	max-height: 300px;
+}
+
+.category-attachment-product-img, .product-attachment-img {
+	max-width: 80px;
+	max-height: 60px;
+	margin: 5px;
+}
+
+.category-attachment-moreproducts,
+.product-attachment-morepics {
+	font-size: 0.9em;
+	font-weight: bolder;
 }
 
 .post-time {
