--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -133,9 +133,11 @@
 	text-decoration: none;	
 }
 
+.autocomplete-container:not(.ui-state-highlight) {
+	border: 1px solid transparent;
+}
 .autocomplete-container {
 	min-height: 60px;
-	border: 1px solid transparent;
 	padding: 2px 0 0 0;
 }
 
