--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -24,6 +24,9 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+.user-username a {
+	text-decoration: none;
+}
 
 .menu-container {
 	vertical-align: bottom;
