--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -10,6 +10,7 @@ body {
 }
 
 /* margins and other trivial stuff */
+.ml5 {margin-left: 5px;}
 .mr5 {margin-right: 5px;}
 
 /* descriptive-name classes */
@@ -27,6 +28,9 @@ body {
 	font-size: 0.8em;
 	color: grey;
 }
+	/* mouse */
+.pointer {cursor: pointer;}
+	/* others */
 .shadow {
  	box-shadow: -6px 4px 1px grey;
   	-webkit-box-shadow:  -6px 4px 1px grey;
@@ -64,4 +68,9 @@ body {
     border-top: 1px solid #CCCCCC;
     width: 80%;
     margin: 10px auto;
+}
+
+.embedded-images-200 img {
+	max-width: 200px;
+	max-height: 200px;
 }
