--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -121,7 +121,8 @@
 	left: 0.2em;
 }
 
-.autocomplete-results {
+.autocomplete-results,
+.topten-autocomplete-results {
 	position: absolute;
 	width: 400px;
 	max-width: 400px;
@@ -136,15 +137,18 @@
 	text-decoration: none;	
 }
 
-.autocomplete-container:not(.ui-state-highlight) {
+.autocomplete-container:not(.ui-state-highlight),
+.summary-container:not(.ui-state-highlight) {
 	border: 1px solid transparent;
 }
-.autocomplete-container {
+.autocomplete-container,
+.summary-container {
 	min-height: 60px;
 	padding: 2px 0 0 0;
 }
 
-.autocomplete-img {
+.autocomplete-img,
+.summary-img {
 	max-width: 40px;
 	max-height: 40px;
 	float: left;
