--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessops.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessops.css
@@ -5,11 +5,11 @@
 
 .category-welcome-image-container,
 .product-welcome-image-container {
-	border: 1px dotted grey;
-	width: 170px;
-	height: 170px;
-	float: left;
-	position:relative;	
+    border: 1px dotted grey;
+    float: left;
+    height: 170px;
+    margin: 0 10px 5px 0;
+    width: 170px;
 }
 
 .category-welcome-image,
@@ -29,12 +29,12 @@
 	display: inline-block;
 	vertical-align: bottom;
 	font-size: 1.6em;
-	margin: 0 0 0 6px;
+	margin: 0;
 }
 
 .category-welcome-description,
 .product-welcome-description {
-	margin: 0 0 10px 178px;
+	margin: 0 0 10px 0;
 	font-size: 0.9em;
 }
 
@@ -42,7 +42,6 @@
 .product-welcome-category,
 .product-welcome-provider {
 	position: relative;
-	margin-left: 170px;
 }
 
 .category-provider-image,
@@ -86,7 +85,6 @@
     height: 1px;
     line-height: 0;
     width: 62%;
-    margin-left: 180px;
 }
 
 .summary-container {
