--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar.css
@@ -1,17 +1,13 @@
 .navbar {
 	height: 35px;
-	background-color: grey;
-	font-size: 0.9em;
 	margin-bottom: 10px;
 }
-
 .user-container {
-	height: 100%;
 	display: inline-block;
 }
 .user-image {
-	max-width: 20px;
-	max-height: 20px;
+	width: 20px;
+	height: 20px;
 	vertical-align: bottom;
 	margin: 7px 0 0 10px;
 }
@@ -35,6 +31,7 @@
 	padding: 1px;
 	font-size: 0.8em;
 }
+/*
 .menu-container:hover {
 	background-color: lightgrey;
 }
@@ -45,43 +42,57 @@
 	border-top: 1px solid white;
 	border-left: 1px solid white;
 }
+*/
+
+.menu-container:not(.ui-state-active):not(.ui-state-highlight) {
+	border: 1px solid transparent;
+}
+.menu-container.ui-state-active {
+	border-bottom: 1px solid transparent;
+}
+
 .triangle-container {
 	cursor: pointer;
 }
 .ui-icon-triangle-1-s {
 	margin-top: 3px;
 }
+
 .user-menu-partialborder {
 	width: 144px;
 	display: none;
 	margin-left: -145px;
 	margin-top: -1px;
-	border-top: 1px solid white;
 }
+.user-menu-partialborder.ui-state-active {
+	border-bottom: 0;
+	border-left: 0;
+	border-right: 0;
+}
+
 .user-menu {
-	background-color: lightgrey;
 	width: 160px;
-	margin-left: -145px;
+	margin-left: -144px;
 	display: none;
 	color: black;
 	padding: 10px 0;
-	border-left: 1px solid white;
-	border-right: 1px solid white;
-	border-bottom: 1px solid white;
-	
 	position: absolute;
 	z-index: 2;
+}
+.user-menu.ui-state-active {
+	border-top: 1px solid transparent;
 }
 
 .user-menu-item {
 	padding: 1px 0 1px 10px;
 	cursor: pointer;
 }
-.user-menu-item:hover {
-	background-color: gainsboro;
-	padding: 0 0 0 10px;
-	border-top: 1px dotted darkgrey;
-	border-bottom: 1px dotted darkgrey;
+.user-menu-item.ui-state-highlight {
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+}
+.user-menu-item:not(.ui-state-highlight) {
+	border: 1px solid transparent;
 }
 .user-menu-item > a {
 	text-decoration: none;
@@ -95,10 +106,13 @@
     margin: 6px 20px;
 }
 
-.search-container {
+.search-padder {
 	display: inline-block;
+	padding: 2px 0 2px 0;
+}
+
+.search-container {
 	vertical-align: middle;
-	padding: 1px 0 2px;
     position: relative;
     margin-left: 30px;
     background-color: white;
@@ -176,8 +190,12 @@
 	border: 1px dotted grey;
 }
 
+.navigation {
+	border-top: 0 !important;
+	border-bottom: 0 !important;
+}
 .navigation-container {
-	height: 100%;
+	height: 33px;
 }
 .navigation {
 	display: inline-block;
@@ -187,8 +205,8 @@
 	font-size: 0.9em;
 	vertical-align: middle;
 }
-.navigation:hover {
-	background-color: lightgrey;
+.navigation:not(.ui-state-highlight):not(.ui-state-active) {
+	border: 1px solid transparent;
 }
 .navigation > a {
 	text-decoration: none;
