--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
@@ -11,19 +11,11 @@
 	border: 1px solid grey;
 }
 
-.rightbar {
-	height: 1000px;
-	background-color: red;
-}
-
-.content {
-	margin-top: -830px;
-}
-
 .profilepic-container {
-	height: 140px;
-	top: 0;
-	text-align: center;
+    text-align: center;
+    margin-top: -40px;
+    margin-left: 20px;
+    display: inline-block;
 }
 
 .profilepic-inner-container {
@@ -42,10 +34,7 @@
 }
 
 .btn-subscribe-toggle {
-	padding: 5px 7px 5px 5px;
-	margin: 5px 0 0 0;
-	white-space: nowrap;
-	width: 90%;
+	width: 100%;
 }
 
 .fullname {
@@ -103,4 +92,8 @@
 .map {
 	width: 100%;
 	height: 400px;	
+}
+
+.fb-like {
+	margin-top: 5px;
 }
