--- a/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/businessprofile.css
@@ -38,14 +38,20 @@
 }
 
 .fullname {
-	margin-bottom: 5px;
+    margin-bottom: 5px;
+    padding-left: 130px;
 }
+
 .description {
 	font-style: italic;
 }
 .content-info {
-	margin-top: 40px;
+	margin-top: -70px;
 	height: 130px;
+}
+
+.content-info-indented {
+	padding-left: 130px;
 }
 
 .tabs {
