--- a/indgte/indgte-webapp/src/main/webapp/resources/css/navbar/navbar.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/navbar/navbar.css
@@ -9,11 +9,12 @@
 .user-image {
 	width: 20px;
 	height: 20px;
-	vertical-align: bottom;
+	vertical-align: middle;
 	margin: 7px 0 0 10px;
 }
 .user-username {
 	display: inline-block;
+	margin-top: 7px;
 	vertical-align: middle;
 	width: 120px;
 	white-space: nowrap;
@@ -211,4 +212,20 @@
 }
 .navigation > a {
 	text-decoration: none;
+}
+
+.anon-alert-container {
+	margin-bottom: 10px;
+}
+.anon-alert {
+	padding: 10px;
+}
+.anon-alert-icon-container {
+	float: left;
+	height: 40px;
+	width: 30px;
+	text-align: middle;
+}
+.anon-alert-icon {
+	margin: 7px 0 0 7px;
 }
