--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -2,6 +2,18 @@
 body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", helvetica, arial, serif;
 	font-size: 10pt;
+	margin:0;
+}
+
+.container_12 {
+	background-color: white;
+}
+
+.navbar {
+	width: 960px !important;
+	margin: 0;
+	padding: 0;
+	border: 0 !important;
 }
 
 .ui-button .ui-button-text {
@@ -15,7 +27,7 @@ body {
 .mt10 {margin-top: 10px;}
 /* descriptive-name classes */
 .hide {display: none;}
-
+.bold {font-weight: bold;}
 	/* layout */
 .maingrid {min-height: 1000px;}
 .relative {position: relative;}
@@ -48,6 +60,15 @@ a.fatlink {
 }
 
 /* special classes */
+.white-arrow-up {
+	width: 0; 
+	height: 0; 
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	
+	border-bottom: 10px solid white;
+}
+
 .overlay {
 	background-color: white;
 	position: absolute;
@@ -81,7 +102,6 @@ a.fatlink {
 	margin: 0 0 5px 0;
 }
 .sidebar-divider {
-	border-bottom: 1px solid #E9E9E9;
     border-top: 1px solid #CCCCCC;
     width: 80%;
     margin: 10px auto;
@@ -90,4 +110,67 @@ a.fatlink {
 .embedded-images-200 img {
 	max-width: 200px;
 	max-height: 200px;
+}
+
+/*Preview*/
+.dgte-preview:not(.dgte-preview-visible) {
+	display: none;
+}
+
+.dgte-preview.dgte-preview-visible {
+	position: absolute;
+	display: inline-block;
+	width: 302px;
+	background-color: transparent;
+	z-index: 8001;
+}
+
+.dgte-preview .arrow {
+	z-index: 8003;
+	margin-left: 10px;
+	position: relative;
+	margin-bottom: -1px;
+}
+
+.preview-white-container {
+	background-color: white;
+	box-shadow: 0 0 15px 2px #888888;
+	padding: 0 0 10px 0;
+	border: 1px solid #e9e9e9;
+}
+
+.preview-cover-image-container {
+	width: 300px;
+	height: 60px;
+	overflow: hidden;
+	background-color: black;
+}
+.preview-cover-image {
+	width: 300px;
+}
+
+.preview-image-container {
+	position: absolute;
+	background-color: white;
+	display: inline-block;
+	margin-top: -30px;
+	margin-left: 30px;
+	width: 54px;
+	height: 54px;
+	z-index: 8002;
+}
+.preview-image {
+	padding: 2px;
+	width: 50px;
+	height: 50px;
+	z-index: 8002;
+}
+
+.preview-info-container {
+	display: inline-block;
+	margin-left: 85px;
+}
+
+.preview-title {
+	font-weight: bold;
 }
