--- a/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/lists.css
@@ -73,22 +73,26 @@
 .post-attachment img.attachment-img {
 	max-width: 400px;
 	max-height: 300px;
+	vertical-align: bottom;
 }
 
 .post-attachment img.attachment-img-large {
 	max-width: 540px;
 	max-height: 1000px;
+	vertical-align: bottom;
 }
 
 .category-attachment-img {
 	max-width: 400px;
 	max-height: 300px;
+	vertical-align: bottom;
 }
 
 .category-attachment-product-img, .product-attachment-img {
 	max-width: 80px;
 	max-height: 60px;
 	margin: 5px;
+	vertical-align: bottom;
 }
 
 .category-attachment-moreproducts,
