--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -71,8 +71,14 @@ a.fatlink {
 	height: 0; 
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
-	
 	border-bottom: 10px solid white;
+}
+.white-arrow-down {
+	width: 0; 
+	height: 0; 
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-top: 10px solid white;
 }
 
 .overlay {
@@ -135,6 +141,10 @@ a.fatlink {
 }
 
 /*Preview*/
+.dgte-previewlink img {
+	vertical-align: bottom;
+}
+
 .dgte-preview:not(.dgte-preview-visible) {
 	display: none;
 }
