--- a/indgte/indgte-webapp/src/main/webapp/resources/css/userprofile/userprofile.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/userprofile/userprofile.css
@@ -1,8 +1,13 @@
 #body section {
 	min-height: 100px;
+	margin-top: 20px;
 }
 .container {
 	padding: 5px;
+}
+
+.btn-subscribe-toggle {
+	width: 100%;
 }
 
 /*userinfo*/
@@ -46,4 +51,36 @@ li.wish img {
 	margin-left: 5px;
 	display: inline-block;
 	vertical-align: top;
+}
+
+.businesses ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+.userprofile-business-summary {
+	padding: 5px;
+}
+.userprofile-business-summary:not(.ui-state-highlight) {
+	border-top: 1px solid #e9e9e9;
+	border-right: 1px solid transparent;
+	border-bottom: 1px solid transparent;
+	border-left: 1px solid transparent;
+}
+.userprofile-business-summary:not(.ui-state-highlight):first-child {
+	border-top: 1px solid transparent;
+}
+.userprofile-business-summary-img-container {
+	display: inline-block;
+	vertical-align: top;
+}
+.userprofile-business-summary-img {
+	width: 50px;
+	height: 50px;
+	vertical-align: top;
+}
+
+.userprofile-business-summary-info {
+	display: inline-block;
+	margin-top: 4px;
 }
