--- a/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
+++ b/indgte/indgte-webapp/src/main/webapp/resources/css/application.css
@@ -25,8 +25,10 @@ body {
 .ml5 {margin-left: 5px;}
 .mr5 {margin-right: 5px;}
 .mt5 {margin-top: 5px;}
+.mb5 {margin-bottom: 5px;}
 .mt10 {margin-top: 10px;}
 
+.pd2{padding:2px;}
 .pd5{padding:5px;}
 /* descriptive-name classes */
 .hide {display: none;}
